fix: edit url for site url

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Guia do Calouro IFTM - Computação e ADS">
     <meta property="og:description" content="Guia completo para calouros de Ciência da Computação e ADS do IFTM Campus Ituiutaba.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://seusite.com.br">
-    <link rel="canonical" href="https://seusite.com.br">
+    <meta property="og:url" content="https://iftm.rifeeh.com">
+    <link rel="canonical" href="https://iftm.rifeeh.com">
     <meta name="robots" content="index, follow">
 
     <script type="application/ld+json">
