feat: adding moradia and resturante

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <h1>Guia do Calouro IFTM</h1>
             <p>Instituto Federal do Triângulo Mineiro - Campus Ituiutaba</p>
         </div>
+        <nav class="main-nav">
+            <a href="index.html">Início</a>
+            <a href="moradia.html">Moradia</a>
+            <a href="restaurante.html">Restaurantes</a>
+            <a href="transporte.html">Transporte</a>
+        </nav>
     </header>
 
     <main class="container">
@@ -48,7 +54,7 @@
         </section>
 
         <section class="main-content">
-            <div class="card">
+            <div class="card-main">
                 <h3>Grupos de Comunicação</h3>
                 <p>Conecte-se com a galera do curso e fique por dentro de tudo!</p>
                 <div class="social-links">
@@ -61,13 +67,13 @@
                 </div>
             </div>
 
-            <!-- <div class="card">
+            <!-- <div class="card-main">
                 <h3>Manual do Calouro</h3>
                 <p>Nosso guia completo inclui desde dicas de sobrevivência nas aulas de Cálculo até o mapa dos melhores lugares para tirar aquele cochilo entre as aulas! 😴</p>
                 <a href="#" class="social-button">Baixar Manual</a>
             </div> -->
 
-            <!-- <div class="card">
+            <!-- <div class="card-main">
                 <h3>Locais Importantes</h3>
                 <ul style="list-style-type: none; margin-top: 1rem;">
                     <li>🖥️ Laboratórios de Informática - Seu segundo lar</li>
