Update na home page
Links úteis adicionados. Seção sobre bolsas e oportunidades criada.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,34 @@
                 <li>Regex101 (porque ninguém memoriza expressões regulares)</li>
                 <li>ChatGPT (não conte para seus professores! 🤫)</li>
             </ul>
+            <ul>
+                <li><a href="https://virtualif.iftm.edu.br/VRTL/">Virtual IF</a> (maioria das informações estão aqui, vai usar com frequencia)</li>
+                <li><a href="https://iftmituiutaba.com.br/horarios">Horários de aulas</a> (bom pra não errar a sala)</li>
+                <li><a href="https://ava.ituiutaba.iftm.edu.br/login/index.php">AVA</a> (conteúdo das matérias e entregas de trabalhos)</li>
+                <li><a href="https://iftm.edu.br/calendarios/">Calendário Acadêmico</a> (sempre bom saber dos feriados)</li>
+            </ul>
+        </section>
+
+        <section class="bolsas">
+            <h2>Bolsas e Oportunidades Acadêmicas</h2>
+            <ul>
+                <li>
+                    <h3>Assistência Estudantil - Socioeducacional</h3>
+                    <p>O IFTM abre edital para assistência estudantil todo começo de ano. Pode parecer que são muitos documentos, mas são R$300,00 mensais, talvez compense.</p>
+                </li>
+                <li>
+                    <h3>Assistência Estudantil - Alimentação</h3>
+                    <p>O edital também é anual. Pegar uma marmita de graça também pode facilitar sua vida.</p>
+                </li>
+                <li>
+                    <h3>Projetos (Ensino, Pesquisa e Extensão)</h3>
+                    <p>Os projetos são uma ótima oportunidade para ganhar experiência e uma bolsa (R$700,00 - R$770,00). Existem projetos em todas as áreas, se tiver interesse ou uma ideia procure um professor. Ficar só querendo não vai te dar bolsa.</p>
+                </li>
+                <li>
+                    <h3>PET Computação (Programa de Educação Tutorial)</h3>
+                    <p>O PET sempre abre edital para aqueles que desejam desenvolver atividades de ensino, pesquisa e extensão. Existem vagas para bolsistas (R$700,00) e voluntários. Além da bolsa, você adquire experiência, participa de eventos e faz networking. Compensa participar nem que seja como voluntário.</p>
+                </li>
+            </ul>
         </section>
 
         <section class="meme-section">
